--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"> <!-- thymeleaf能够获取到上下文对象 -->
 <head>
     <meta charset="UTF-8">
     <title>注销登录</title>
@@ -9,5 +10,19 @@
 <form method="post" th:action="@{/bb}">
     <input type="submit" value="注销登录">
 </form>
+
+<hr>
+
+<h1>获取认证用户信息</h1>
+<!-- 获取认证用户名 sec spring security context-->
+
+<ul>
+    <li sec:authentication="principal.username"></li>
+    <li sec:authentication="principal.authorities"></li>
+    <li sec:authentication="principal.accountNonExpired"></li>
+    <li sec:authentication="principal.accountNonLocked"></li>
+    <li sec:authentication="principal.credentialsNonExpired"></li>
+</ul>
+
 </body>
 </html>
